# home-assistant-uvi-hkvo-consumption-tracker

./: .env.template  .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/: CODEOWNERS
custom_components/uvi/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  device_mapping.py  fetch_strategy.py  manifest.json  parser.py  sensor.py  strings.json
custom_components/uvi/translations/: de.json
tests/: conftest.py  payload_samples.py  test_api_csrf.py  test_api_endpoints.py  test_device_mapping.py  test_entity_publication.py  test_fetch_strategy.py  test_online_portal.py  test_parser.py
